--- a/public/frontend/style.css
+++ b/public/frontend/style.css
@@ -12,3 +12,48 @@ header .form-control,
 header .form-select {
     border-left: 0;
 }
+
+.service-box {
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+.service-box:hover {
+  transform: translateY(-5px);
+}
+
+.promo-card {
+  min-height: 160px;
+}
+
+
+footer .footer-links li {
+  margin-bottom: 8px;
+}
+
+footer .footer-links a {
+  text-decoration: none;
+  color: #555;
+  font-size: 14px;
+}
+
+footer .footer-links a:hover {
+  color: #000;
+}
+
+.social-icon {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  background: #f1f1f1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #333;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+.social-icon:hover {
+  background: #000;
+  color: #fff;
+}
