--- a/public/frontend/style.css
+++ b/public/frontend/style.css
@@ -57,3 +57,92 @@ footer .footer-links a:hover {
   background: #000;
   color: #fff;
 }
+
+.modal-content {
+  max-width: 420px;
+  margin: auto;
+}
+
+.modal-backdrop.show {
+  opacity: 0.7;
+}
+
+.modal-content {
+  box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+}
+
+.modal .form-control:focus,
+.modal .form-select:focus {
+  box-shadow: none;
+  border-color: #ced4da;
+}
+#phoneSection, #otpSection {
+  transition: all 0.3s ease;
+}
+
+.otp-box {
+  width: 48px;
+  height: 55px;
+  font-size: 22px;
+  font-weight: 600;
+  border-radius: 10px;
+}
+
+.otp-box:focus {
+  box-shadow: none;
+  border-color: #0d6efd;
+}
+
+
+/* ================= PROMO SLIDER ================= */
+
+.promo-card {
+  position: relative;
+  height: 220px;
+  border-radius: 20px;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  color: #000;
+}
+
+.promo-card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(255,255,255,0.6);
+}
+
+.promo-card.green::before {
+  background: rgba(16, 122, 82, 0.85);
+}
+
+.promo-card.pink::before {
+  background: rgba(210, 32, 111, 0.85);
+}
+
+.promo-content {
+  position: relative;
+  z-index: 2;
+  max-width: 60%;
+}
+
+.promo-card h4 {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.splide__arrow {
+  background: #fff;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+.splide__arrow svg {
+  fill: #000;
+}
