--- a/public/frontend/style.css
+++ b/public/frontend/style.css
@@ -59,10 +59,14 @@ footer .footer-links a:hover {
 }
 
 .modal-content {
-    max-width: 560px;
+    max-width: 700px;
     margin: auto;
 }
-
+.modal_g63{
+  width: 100%;
+  border-radius: 20px;
+  padding-top:10px ;
+}
 .modal-backdrop.show {
   opacity: 0.7;
 }
